crates/ci-tests/tests/snapshots/use_case_tester__cmd-mvr_search_@testingafreeclaim__upgraded.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: cmd_output
---
- @testingafreeclaim/upgraded
# --
Networks: mainnet

- @testingafreeclaim/upgraded-demo
# 
Networks: mainnet

Tip: You can find more information about a package by using: mvr resolve <name>
