crates/ci-tests/tests/snapshots/use_case_tester__cmd-mvr_search_@testingafreeclaim__upgraded_--limit_1.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: cmd_output
---
- @testingafreeclaim/upgraded
# --
Networks: mainnet

Tip: You can find more information about a package by using: mvr resolve <name>

There are multiple pages of results. Use the cursor to paginate through the results.
mvr search <query> --cursor eyJuYW1lIjoiQHRlc3RpbmdhZnJlZWNsYWltL3VwZ3JhZGVkIn0=
